--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="main-app" style="display:none ;">
+        <div class="main-app">
             <div class="main-app-weather">
                 <div class="app-weather-list">
                     <div class="weather-menu">
